--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
+  <title>Blocmetrics</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="container-fluid navbar">
+    <div class= "row">
+      <ul class="nav nav-tabs pull-left col-xs-12">
+        <li><%= link_to "Home", root_path %></li>
+        <% if user_signed_in? %> 
+          <li class= "pull-right"><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %></li>
+          <li class= "avatar pull-right"><%= image_tag current_user.avatar_url(28) %></li>
+        <% else %>
+          <li class= "pull-right"><%= link_to "Sign Up",  new_user_registration_path, :class => 'navbar-link'  %></li> 
+          <li class= "pull-right"><%= link_to "Sign In", new_user_session_path , :class => 'navbar-link'  %></li> 
+        <% end %>
+      </ul>
+      <div class= "user-info"> 
+        <% if user_signed_in? %>
+          <h5 class= "text-right"><small>Signed in as: </small><strong><%= current_user.username || current_user.email %></strong></h5>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <% if flash[:notice] %>
+    <div class="alert alert-success">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <%= flash[:notice] %>
+    </div>
+  <% elsif flash[:alert] %>
+    <div class="alert alert-warning">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <%= flash[:alert] %>
+    </div>
+  <% end %>  
+  <%= yield %>
 </body>
 </html>
