--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
           
         </div>
       <% else %>
-        <div class="jumbotron">
+        <div class="jumbotron title">
           <h1 class= "title text-center">Blocmetrics</h1>
           <p class= "text-center">Blocmetrics is a site that offers an analytics service to track events on websites</p>
           <p class= "text-center">
