--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
         <li><%= link_to "Home", root_path %></li>
         <% if user_signed_in? %> 
           <li class= "pull-right"><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %></li>
-          <li class= "avatar pull-right"><%= image_tag current_user.avatar_url(28) %></li>
+          <li class= "pull-right"><%= link_to "Change Password", edit_user_registration_path %></li>
         <% else %>
           <li class= "pull-right"><%= link_to "Sign Up",  new_user_registration_path, :class => 'navbar-link'  %></li> 
           <li class= "pull-right"><%= link_to "Sign In", new_user_session_path , :class => 'navbar-link'  %></li> 
@@ -21,7 +21,7 @@
       </ul>
       <div class= "user-info"> 
         <% if user_signed_in? %>
-          <h5 class= "text-right"><small>Signed in as: </small><strong><%= current_user.username || current_user.email %></strong></h5>
+          <h5 class= "text-right"><small class="white">Signed in as: </small><strong><%= current_user.username || current_user.email %></strong></h5>
         <% end %>
       </div>
     </div>
